--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
     "axios": "^1.11.0",
+    "axios-cache-interceptor": "^1.8.0",
     "expo": "~53.0.20",
     "expo-audio": "~0.4.8",
     "expo-blur": "~14.1.5",
@@ -30,6 +31,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-manipulator": "~13.1.7",
     "expo-linking": "~7.1.7",
     "expo-local-authentication": "~16.0.5",
     "expo-location": "~18.1.6",
@@ -54,8 +56,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6",
-    "expo-image-manipulator": "~13.1.7"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
