--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "expo-linking": "~7.1.7",
     "expo-local-authentication": "~16.0.5",
     "expo-location": "~18.1.6",
+    "expo-network": "~7.1.5",
+    "expo-notifications": "~0.31.4",
     "expo-print": "~14.1.4",
     "expo-router": "~5.1.4",
     "expo-sharing": "~13.1.5",
@@ -44,6 +46,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "lottie-react-native": "7.2.2",
     "nativewind": "^4.1.23",
@@ -59,10 +62,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6",
-    "expo-network": "~7.1.5",
-    "expo-notifications": "~0.31.4",
-    "expo-updates": "~0.28.17"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
