--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-notifications": "~0.31.4",
     "expo-print": "~14.1.4",
     "expo-router": "~5.1.4",
+    "expo-secure-store": "~14.2.3",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -60,6 +61,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.6"
