--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.6",
     "expo-checkbox": "~4.1.4",
-    "expo-dev-client": "~5.2.4"
+    "expo-dev-client": "~5.2.4",
+    "expo-clipboard": "~7.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
