--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "expo": "~53.0.20",
     "expo-audio": "~0.4.8",
     "expo-blur": "~14.1.5",
+    "expo-checkbox": "~4.1.4",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-local-authentication": "~16.0.5",
     "expo-location": "~18.1.6",
@@ -64,10 +65,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6",
-    "expo-checkbox": "~4.1.4",
-    "expo-dev-client": "~5.2.4",
-    "expo-clipboard": "~7.1.5"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
