--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Environment variables for @aerley_adkins/alfa-and-omega (PRODUCTION)
 
 EXPO_PUBLIC_API_URL=http://200.115.188.54:4325
+GOOGLE_MAPS_API_KEY=AIzaSyCHOrsTs7_o6buDcl4N1xIlr-Z3PrQeGCk
