--- a/app.json
+++ b/app.json
@@ -19,6 +19,11 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "config": {
+        "googleMaps": {
+          "apiKey": "process.env.GOOGLE_MAPS_API_KEY"
+        }
+      },
       "edgeToEdgeEnabled": true,
       "package": "com.aerley_adkins2.alfaOmegaExpoRouter",
       "googleServicesFile": "./google-services.json",
