--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-charts": "^1.4.63",
+    "react-native-google-places-textinput": "^0.8.0",
     "react-native-maps": "1.20.1",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
