Integrando expo-insights

--- a/app.json
+++ b/app.json
@@ -81,6 +81,7 @@
     },
     "updates": {
       "url": "https://u.expo.dev/46766cc7-c6cb-4a8e-a448-5f0892fa7936"
-    }
+    },
+    "owner": "aerley_adkins-2"
   }
 }
