--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "expo-insights": "~0.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
