--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,14 @@
         "buildType": "apk"
       },
       "channel": "production"
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "environment": "development"
     }
   },
   "submit": {
