--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-insights": "~0.9.3",
     "expo-linking": "~7.1.7",
     "expo-local-authentication": "~16.0.5",
     "expo-location": "~18.1.6",
@@ -67,8 +68,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.6",
-    "expo-insights": "~0.9.3"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
