Refactor BottomSheetCart to use payToCode from selectedAddressData; remove HighlightCard component; update package dependencies and versions; add slugify package; modify CreateOrder type to include payToCode.

--- a/app.json
+++ b/app.json
@@ -68,7 +68,8 @@
           ],
           "enableBackgroundRemoteNotifications": true
         }
-      ]
+      ],
+      "expo-asset"
     ],
     "experiments": {
       "typedRoutes": true
