--- a/package.json
+++ b/package.json
@@ -16,22 +16,21 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
-    "@react-navigation/elements": "^2.3.8",
     "@react-navigation/material-top-tabs": "^7.3.4",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
     "axios": "^1.11.0",
     "axios-cache-interceptor": "^1.8.0",
     "expo": "~53.0.23",
+    "expo-asset": "~11.1.7",
     "expo-audio": "~0.4.9",
-    "expo-blur": "~14.1.5",
     "expo-checkbox": "~4.1.4",
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.1",
@@ -47,17 +46,13 @@
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
     "lottie-react-native": "7.2.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-gifted-charts": "^1.4.63",
     "react-native-google-places-textinput": "^0.8.0",
     "react-native-maps": "1.20.1",
     "react-native-pager-view": "6.7.1",
@@ -68,6 +63,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "slugify": "^1.6.6",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
