Initialize project configuration files for IntelliJ IDEA, including misc.xml, modules.xml, vcs.xml, and workspace.xml. Set up project structure, version control settings, and initial change lists.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,9 @@ buildscript {
     classpath('com.facebook.react:react-native-gradle-plugin')
     classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
   }
+  ext {
+    ndkVersion = "29.0.14206865"
+  }
 }
 
 def reactNativeAndroidDir = new File(
