--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "lottie-react-native": "7.2.2",
     "nativewind": "^4.1.23",
