--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="alfaomegaexporouter"/>
         <data android:scheme="exp+alfaomegaexporouter"/>
+        <data android:scheme="exp+isync"/>
       </intent-filter>
     </activity>
     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
