--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,7 +18,7 @@ org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemo
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.daemon=true
-org.gradle.caching=true
+org.gradle.caching=false
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -33,7 +33,7 @@ android.enablePngCrunchInReleaseBuilds=true
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
 # For development: use only arm64-v8a (most common)
 # For production: use armeabi-v7a,arm64-v8a,x86,x86_64
-reactNativeArchitectures=arm64-v8a
+reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
